minor subtext edits. trying to fix mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html{
 .container {
     /* display: flex; or inline-flex */
     justify-content: center;
+    margin: auto;
    
   }
 
@@ -22,6 +23,7 @@ html{
     justify-content: space-evenly;
     flex-wrap:wrap;
     /* flex-direction: row  */
+    margin: auto;
 
    
 }
